# BRlog

./: .gitignore  Cargo.toml  README.md  build.rs
i18n/cs/: brlog.ftl
i18n/en/: brlog.ftl
src/: app.rs  config.rs  db.rs  i18n.rs  main.rs  platform.rs  theme.rs
src/models/: log.rs  mod.rs  qso.rs
src/ui/: bar.rs  buttons.rs  inputs.rs  log.rs  log_window.rs  logbar.rs  logbook.rs  main.rs  main_window.rs  mod.rs  popup.rs  qso_form.rs  resize.rs  settings.rs  settings_window.rs  sidebar.rs  title.rs  title_bar.rs
