[package]
name = "brlog"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Richard Fakenberg <richard.fakenberg@gmail.com>"]
description = "Multiplatformní radioamatérský denník — nativní desktop aplikace"
license = "GPL-3.0-or-later"
repository = "https://github.com/OK1BR/BRlog"
readme = "README.md"

[dependencies]
iced = { version = "0.13", features = ["svg", "tokio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
